--- a/res/layout/main_list.xml
+++ b/res/layout/main_list.xml
@@ -24,7 +24,7 @@
     <!-- ListView used when data is present -->
     <ListView android:id="@+id/android:list"
     	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
+    	android:layout_height="fill_parent"
     	android:fadeScrollbars="true"
     	/>
     <!-- Optional view if no data is present for the list -->
