--- a/res/layout/edit_note.xml
+++ b/res/layout/edit_note.xml
@@ -14,7 +14,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:minLines="4"
-		android:maxLines="10"
+		android:gravity="top"
 		android:textSize="10dp"/>
 		
 	<LinearLayout
