--- a/res/layout/edit_note.xml
+++ b/res/layout/edit_note.xml
@@ -7,6 +7,16 @@
 	android:layout_height="fill_parent" >
 	
 	<TextView
+		android:text="@string/edit_note_img_title"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<ImageView android:id="@+id/edit_note_img"
+		android:src="@drawable/img_gallery"
+		android:layout_width="60dp"
+		android:layout_height="60dp"
+		android:layout_gravity="center_horizontal"/>
+	
+	<TextView
 		android:text="@string/edit_note_text_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
