--- a/res/layout/edit_note.xml
+++ b/res/layout/edit_note.xml
@@ -10,11 +10,25 @@
 		android:text="@string/edit_note_img_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
-	<ImageView android:id="@+id/edit_note_img"
-		android:src="@drawable/img_gallery"
-		android:layout_width="60dp"
-		android:layout_height="60dp"
-		android:layout_gravity="center_horizontal"/>
+	<RelativeLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp">
+		<ImageView android:id="@+id/edit_note_img"
+			android:src="@drawable/img_gallery"
+			android:layout_width="80dp"
+			android:layout_height="80dp"
+			android:padding="4dp"
+			android:layout_centerHorizontal="true"/>
+		<ImageView android:id="@+id/edit_note_img_remove"
+			android:src="@drawable/img_remove_icon"
+			android:layout_width="30dp"
+			android:layout_height="30dp"
+			android:paddingLeft="6dp"
+			android:layout_toRightOf="@id/edit_note_img"
+			android:visibility="invisible"/>
+	</RelativeLayout>
 	
 	<TextView
 		android:text="@string/edit_note_text_title"
