--- a/res/layout/main_note_row.xml
+++ b/res/layout/main_note_row.xml
@@ -10,13 +10,16 @@
 		android:orientation="horizontal"
 		>
 		<ImageView android:id="@+id/main_note_row_img"
-			android:layout_width="40dp"
-			android:layout_height="40dp"
+			android:layout_width="50dp"
+			android:layout_height="50dp"
+			android:paddingLeft="4dp"
+			android:paddingRight="4dp"
 			android:visibility="gone"
 			/>
 		<TextView android:id="@+id/main_note_row_text"
 		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"/>
+		    android:layout_height="fill_parent"
+		    android:textSize="12sp"/>
 	</LinearLayout>
 	<RelativeLayout
 		android:layout_width="fill_parent"
