--- a/res/layout/main_note_row.xml
+++ b/res/layout/main_note_row.xml
@@ -31,6 +31,7 @@
 			android:layout_height="wrap_content"
 			android:layout_alignParentLeft="true"
 			android:textSize="10sp"
+			android:textStyle="bold"
 			android:text="@string/date_created"
 			/>
 		<TextView android:id="@+id/main_note_row_created"
@@ -43,6 +44,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="10sp"
+			android:textStyle="bold"
 			android:layout_alignParentRight="true"
 			/>
 		<TextView
