--- a/res/layout/main_list.xml
+++ b/res/layout/main_list.xml
@@ -22,6 +22,12 @@
 			  	android:layout_alignParentRight="true"
 			  	android:text="ADD"
 			  	/>
+			  <Button android:id="@+id/main_button_search"
+			  	android:layout_width="wrap_content"
+			  	android:layout_height="wrap_content"
+			  	android:layout_toLeftOf="@id/main_button_add"
+			  	android:text="SRCH"
+			  	/>
     </RelativeLayout>
     <!-- ListView used when data is present -->
     <ListView android:id="@+id/android:list"
