Displaying Alarm Status - setting an alarm will display its status on Edit screen - can be removed by hitting the X icon

--- a/res/layout/edit_note.xml
+++ b/res/layout/edit_note.xml
@@ -79,13 +79,27 @@
 			android:layout_height="wrap_content"/>
 	</LinearLayout>
 	
-	<TextView
+	<RelativeLayout
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Reminder set for: "/>
-	<Button android:id="@+id/edit_note_alarm"
-		android:text="@string/edit_alarm_button"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content">
+		<Button android:id="@+id/edit_note_alarm"
+			android:text="@string/edit_alarm_button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
+		<TextView android:id="@+id/edit_note_alarm_status"
+			android:layout_below="@id/edit_note_alarm"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:visibility="gone"
+			android:text="Reminder set for: "/>
+		<ImageView android:id="@+id/edit_note_alarm_remove"
+			android:src="@drawable/img_remove_icon"
+			android:layout_width="30dp"
+			android:layout_height="30dp"
+			android:paddingLeft="6dp"
+			android:layout_alignTop="@id/edit_note_alarm_status"
+			android:layout_toRightOf="@id/edit_note_alarm_status"
+			android:visibility="gone"/>
+	</RelativeLayout>
 	
 </LinearLayout>
