--- a/res/layout/edit_note.xml
+++ b/res/layout/edit_note.xml
@@ -6,10 +6,59 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent" >
 	
-	<TextView
-		android:text="@string/edit_note_img_title"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+	<!-- Action Bar -->
+	<RelativeLayout
+		android:id="@+id/edit_banner"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+		<!-- Cancel/Back button -->
+		<ImageButton android:id="@+id/edit_note_cancel"
+			android:layout_width="36dp"
+			android:layout_height="36dp"
+			android:layout_alignParentLeft="true"
+			android:src="@drawable/ic_back_unselected"
+			android:background="@null"
+			/>
+		<View android:id="@+id/edit_banner_separator_0"
+		  	android:layout_toRightOf="@id/edit_note_cancel"
+		  	android:layout_width="1dp"
+		  	android:layout_height="36dp"
+		  	android:background="#FFFFFFFF"
+		  	/>
+		<!-- Logo/Title -->
+		<TextView
+			android:text="@string/app_name"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toRightOf="@id/edit_banner_separator_0"/>
+		<!-- Delete -->
+		<ImageButton android:id="@+id/edit_note_discard"
+			android:layout_width="36dp"
+			android:layout_height="36dp"
+			android:layout_alignParentRight="true"
+			android:src="@drawable/ic_delete_unselected"
+			android:background="@null"/>
+		<View android:id="@+id/edit_banner_separator_1"
+		  	android:layout_toLeftOf="@id/edit_note_discard"
+		  	android:layout_width="1dp"
+		  	android:layout_height="36dp"
+		  	android:background="#FFFFFFFF"
+		  	/>
+		<!-- Save -->
+		<ImageButton android:id="@+id/edit_note_save"
+			android:layout_width="36dp"
+			android:layout_height="36dp"
+			android:layout_toLeftOf="@id/edit_banner_separator_1"
+			android:src="@drawable/ic_menu_save"
+			android:background="@null"/>
+		<View android:id="@+id/edit_banner_separator_2"
+		  	android:layout_toLeftOf="@id/edit_note_save"
+		  	android:layout_width="1dp"
+		  	android:layout_height="36dp"
+		  	android:background="#FFFFFFFF"
+		  	/>
+	</RelativeLayout>
+	
 	<RelativeLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
@@ -29,6 +78,16 @@
 			android:layout_toRightOf="@id/edit_note_img"
 			android:visibility="invisible"/>
 	</RelativeLayout>
+	
+	<!-- Horizontal line.
+    	 TODO: is there a better way?  Does this bloat the layout? -->
+    <!--
+    <View android:id="@+id/edit_div_banner"
+    	android:layout_below="@id/edit_banner"
+    	android:layout_width="fill_parent"
+		android:layout_height="1dp"
+		android:background="#FFFFFFFF" />
+	-->
 	
 	<EditText android:id="@+id/edit_note_text"
 		android:hint="@string/edit_note_text_hint"
@@ -60,18 +119,8 @@
 		android:orientation="horizontal"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
-		
-		<!-- TODO: consider adding padding around the buttons -->
-		<Button android:id="@+id/edit_note_save"
-			android:text="@string/edit_save_button"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"/>
 		<Button android:id="@+id/edit_note_share"
 			android:text="@string/edit_share_button"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"/>
-		<Button android:id="@+id/edit_note_discard"
-			android:text="@string/edit_discard_button"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"/>
 	</LinearLayout>
