--- a/res/layout/edit_note.xml
+++ b/res/layout/edit_note.xml
@@ -55,47 +55,45 @@
 		  	android:layout_toLeftOf="@id/edit_note_save"
 		  	android:layout_width="1dp"
 		  	android:layout_height="36dp"
-		  	android:background="#FFFFFFFF"
-		  	/>
+		  	android:background="#FFFFFFFF"/>
 	</RelativeLayout>
 	
-	<RelativeLayout
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:paddingTop="10dp"
-		android:paddingBottom="10dp">
-		<ImageView android:id="@+id/edit_note_img"
-			android:src="@drawable/img_gallery"
-			android:layout_width="80dp"
-			android:layout_height="80dp"
-			android:padding="4dp"
-			android:layout_centerHorizontal="true"/>
-		<ImageView android:id="@+id/edit_note_img_remove"
-			android:src="@drawable/img_remove_icon"
-			android:layout_width="30dp"
-			android:layout_height="30dp"
-			android:paddingLeft="6dp"
-			android:layout_toRightOf="@id/edit_note_img"
-			android:visibility="invisible"/>
-	</RelativeLayout>
-	
-	<!-- Horizontal line.
-    	 TODO: is there a better way?  Does this bloat the layout? -->
-    <!--
-    <View android:id="@+id/edit_div_banner"
+	<!-- Horizontal line -->
+	<View android:id="@+id/edit_div_banner"
     	android:layout_below="@id/edit_banner"
     	android:layout_width="fill_parent"
 		android:layout_height="1dp"
 		android:background="#FFFFFFFF" />
-	-->
 	
+	<!-- Note Text Box -->
 	<EditText android:id="@+id/edit_note_text"
 		android:hint="@string/edit_note_text_hint"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="10dp"
+		android:layout_marginBottom="10dp"
 		android:minLines="4"
 		android:gravity="top"
 		android:textSize="10sp"/>
+		
+	<!-- Image container to display and remove image -->
+	<RelativeLayout android:id="@+id/edit_note_img_container"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:visibility="gone">
+		<ImageView android:id="@+id/edit_note_img"
+			android:layout_width="80dp"
+			android:layout_height="80dp"
+			android:layout_marginLeft="10dp"
+			android:layout_centerVertical="true"/>
+		<ImageView android:id="@+id/edit_note_img_remove"
+			android:src="@drawable/img_remove_icon"
+			android:layout_width="30dp"
+			android:layout_height="30dp"
+			android:layout_marginRight="10dp"
+			android:layout_alignParentRight="true"
+			android:layout_centerVertical="true"/>
+	</RelativeLayout>
 	
 	<!-- CheckBox and accompanying TextView are visibility=gone by default.
 		 These elements will only be visible when editing an already existing 
